[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-distro-playground"
version = "0.1.0"
description = "Python host runtime for Retro Distro Playground"
requires-python = ">=3.11"
dependencies = [
  "pycdlib>=1.16,<2",
  "qemu.qmp==0.0.6",
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
retro-py = "retro_host.cli:main"
qmp-py = "retro_host.qmp_cli:main"

[tool.black]
target-version = ["py311"]
line-length = 99
extend-exclude = "/(qemu\\.d|download\\.d|tagfile\\.d|\\.venv)/"

[tool.setuptools.packages.find]
include = ["retro_host*"]
