[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-distro-playground"
version = "0.1.0"
description = "Python host runtime for Retro Distro Playground"
requires-python = ">=3.11"
dependencies = [
  "fsspec[http]>=2025.3",
  "pydantic>=2.11,<3",
  "pycdlib>=1.16,<2",
  "qemu.qmp==0.0.6",
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
retro = "hostlib.cli:main"
qmp = "hostlib.qmp_cli:main"

[tool.black]
target-version = ["py311"]
line-length = 99
extend-exclude = "/(qemu\\.d|download\\.d|tagfile\\.d|\\.venv)/"

[tool.setuptools.packages.find]
include = ["hostlib", "hostlib.*"]
